force-app/main/default/objects/Account/fields/canEmployeesOrder__c.field-meta.xml
<CustomField>
    <fullName>canEmployeesOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Employees can access the Orders portal</description>
    <label>Order Portal Access for Employees</label>
    <type>Checkbox</type>
</CustomField>