force-app/main/default/objects/Account/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Discount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>