force-app/main/default/objects/Account/fields/DiscountLevel__c.field-meta.xml
<CustomField>
    <fullName>DiscountLevel__c</fullName>
    <label>Discount Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>