force-app/main/default/objects/Account/fields/ExtId__c.field-meta.xml
<CustomField>
    <fullName>ExtId__c</fullName>
    <description>Record Id in external system</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the ID for this record in an internal system</inlineHelpText>
    <label>External ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>