force-app/main/default/objects/Account/fields/isSendPromotions__c.field-meta.xml
<CustomField>
    <fullName>isSendPromotions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should promotions be sent to this account?</description>
    <label>Send Promotions</label>
    <type>Checkbox</type>
</CustomField>