force-app/main/default/objects/Account/fields/MaxAccount__c.field-meta.xml
<CustomField>
    <fullName>MaxAccount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Maximum combined discount allowed for thie account</description>
    <label>Max. Discount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>