force-app/main/default/objects/Account/fields/OpenCaseCount__c.field-meta.xml
<CustomField>
    <fullName>OpenCaseCount__c</fullName>
    <description>Number of open cases</description>
    <label>Open Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>