force-app/main/default/objects/Account/fields/PipelineTotal__c.field-meta.xml
<CustomField>
    <fullName>PipelineTotal__c</fullName>
    <label>Pipeline (Total)</label>
    <summarizedField>Offer__c.TotalPrice__c</summarizedField>
    <summaryFilterItems>
        <field>Offer__c.Status__c</field>
        <operation>equals</operation>
        <value>Ready, Presented</value>
    </summaryFilterItems>
    <summaryForeignKey>Offer__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>