force-app/main/default/objects/Account/fields/TotalWon__c.field-meta.xml
<CustomField>
    <fullName>TotalWon__c</fullName>
    <label>Won Offers (Total)</label>
    <summarizedField>Offer__c.TotalPrice__c</summarizedField>
    <summaryFilterItems>
        <field>Offer__c.Status__c</field>
        <operation>equals</operation>
        <value>Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Offer__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>