force-app/main/default/objects/Account/validationRules/Account_Validation_w_Bypass.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Validation_w_Bypass</fullName>
    <active>true</active>
    <description>Checks if the Account type has been filled. Users with custom permission &quot;bypass validation&quot; can bypass the rule</description>
    <errorConditionFormula>AND(ISBLANK(TEXT(Type)), NOT($Permission.BypassValidations))</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>You have to pick an Account type</errorMessage>
</ValidationRule>