force-app/main/default/objects/Account/validationRules/Account_Validation_wo_Bypass.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Validation_wo_Bypass</fullName>
    <active>false</active>
    <description>Checks if the Account type has been filled.</description>
    <errorConditionFormula>ISBLANK(TEXT(Type))</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>You have to pick an Account type</errorMessage>
</ValidationRule>