force-app/main/default/objects/Account/listViews/Account_Check.listView-meta.xml
<ListView>
    <fullName>Account_Check</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>Account Check</label>
</ListView>